--- a/homedir/.gitconfig
+++ b/homedir/.gitconfig
@@ -16,19 +16,18 @@
   # status = auto
   # branch = auto
 
-[color "branch"]
-  current = yellow reverse
-  local = yellow
-  remote = green
+# [color "branch"]
+  # current = yellow reverse
+  # local = yellow
+  # remote = green
 [color "diff"]
-  meta = yellow bold
+  # meta = yellow bold
   frag = magenta bold
-  old = red bold
+  # old = red bold
   new = green bold
 [color "status"]
-  added = yellow
-  changed = green
-  untracked = cyan
+  changed = red bold
+  untracked = red
 
 
 [advice]
