Add cascadia code font

--- a/install/Brewfile
+++ b/install/Brewfile
@@ -67,6 +67,8 @@ brew "heroku/brew/heroku"
 cask "dropbox"
 cask "firefox"
 cask "font-fira-code"
+cask "font-cascadia-code"
+cask "font-cascadia-code-pl"
 cask "google-chrome"
 cask "postman"
 cask "slack"
